[package]
name = "loadingbar"
version = "1.0.1"
edition = "2021"
description = "A simple loading bar for the terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/basicallygit/loadingbar"
docs = "https://docs.rs/loadingbar/latest/loadingbar/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
